<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".fragments.AboutDialog" >

    <ImageView
        android:id="@+id/imageView_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_launcher" />
    
    <TextView
        android:id="@+id/textView_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView_about"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/text_view_dialog_about" />

    <Button
        android:id="@+id/buttonDialog_about"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_about"
        android:layout_centerHorizontal="true"
        android:text="@string/button_about_dialog" />

</RelativeLayout>